# prelegal

./: .gitignore  CLAUDE.md  Dockerfile  OBSERVABILITY.md  README.md  catalog.json  docker-compose.yml
backend/: pyproject.toml
backend/app/: ai.py  database.py  doc_config.py  main.py  schemas.py
backend/app/routers/: auth.py  catalog.py  doc_chat.py  nda_chat.py  sessions.py
backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_doc_chat.py  test_nda_chat.py  test_sessions.py
frontend/: MANUAL_TEST_PLAN.md  jest.config.ts  jest.setup.ts  package.json
frontend/__mocks__/: html2pdf.js.ts  next-navigation.ts  react-markdown.tsx  rehype-raw.ts
frontend/__tests__/: Dashboard.test.tsx  DocChat.test.tsx  DocCreator.test.tsx  DocPreview.test.tsx  NdaCreator.test.tsx  NdaForm.test.tsx  NdaPreview.test.tsx  docUtils.test.ts  templateUtils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/doc/[slug]/: DocSlugClient.tsx  page.tsx
frontend/app/dashboard/nda/: page.tsx
frontend/app/dashboard/preview/: PreviewClient.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthGuard.tsx  DocChat.tsx  DocCreator.tsx  DocPreview.tsx  NdaChat.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/lib/: api.ts  docChatApi.ts  docUtils.ts  ndaChatApi.ts  templateUtils.ts
scripts/: start-mac.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE
